# sample_wasm_app

./: Cargo.toml
