[package]
name = "sample_wasm_app"
version = "0.1.0"
authors = ["keitahino <keitahino0415@gmail.com>"]
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
repository = "https://github.com/keita-hino/sample_wasm_app"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"